--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -2,19 +2,20 @@
     display: flex;
     justify-items: space-around;
     flex-wrap: wrap;
-    
+    padding: 0px;
 }
 
 .card {
     display: flex;
     align-items: center;
-    border-radius: 25%;
+    border-radius: 10%;
     margin: 20px;
-
 
 }
 
+
+
 .card-img-top {
-    
     width: 125px;
+    
 }
