--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -1,3 +1,32 @@
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: gainsboro;
+}
+
+header a {
+    margin-right: 20px;
+}
+
+/*----------------------------------------------------------------
+
+----------------------------------------------------------------*/
+.container-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15%;
+    overflow: hidden;
+}
+
+.btn-home {
+    margin-top: 50px;
+}
+
+
+
+
 .list {
     display: flex;
     justify-items: space-around;
